--- a/admin/add_problems/add_problems.html
+++ b/admin/add_problems/add_problems.html
@@ -4,21 +4,107 @@
   <meta charset="UTF-8">
   <title>문제 등록</title>
   <link rel="stylesheet" href="../../assets/css/style.css">
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+  <style>
+    * {
+      box-sizing: border-box;
+    }
+
+    body {
+      font-family: sans-serif;
+      margin: 0;
+      background: #f4f4f4;
+    }
+
+    .navbar {
+      position: fixed;
+      top: 0;
+      right: 0;
+      background-color: #2b94d4;
+      width: 100%;
+      padding: 14px 20px;
+      display: flex;
+      justify-content: flex-end;
+      align-items: center;
+      z-index: 1000;
+    }
+
+    .navbar .welcome {
+      margin-right: auto;
+      color: white;
+      font-weight: bold;
+      font-size: 18px;
+    }
+
+    .navbar a {
+      color: white;
+      text-decoration: none;
+      margin-left: 20px;
+      font-weight: 500;
+    }
+
+    .navbar a:hover {
+      text-decoration: underline;
+    }
+
+    .container {
+      max-width: 800px;
+      background: white;
+      padding: 40px;
+      border-radius: 10px;
+      box-shadow: 0 0 15px rgba(0,0,0,0.1);
+      margin: 120px auto 0 auto;
+      text-align: center;
+    }
+
+    h1 {
+      margin-bottom: 30px;
+    }
+
+    textarea {
+      width: 100%;
+      height: 300px;
+      padding: 10px;
+      margin-bottom: 20px;
+      font-family: monospace;
+      font-size: 14px;
+      border-radius: 6px;
+      border: 1px solid #ccc;
+      resize: vertical;
+    }
+
+    button {
+      padding: 10px 20px;
+      background-color: #4CAF50;
+      color: white;
+      border: none;
+      border-radius: 6px;
+      cursor: pointer;
+      font-weight: bold;
+    }
+
+    button:hover {
+      background-color: #45a049;
+    }
+  </style>
 </head>
 <body>
-  <div class="top-nav">
-    <a href="../index.html">← 관리자 홈으로</a>
+
+  <div class="navbar">
+    <div class="welcome"><a href="../index.html" style="color: white; text-decoration: none;">← 관리자 홈</a></div>
+    <div id="nav-links"></div>
   </div>
-  
+
   <div class="container">
     <h1>문제 등록</h1>
     <textarea id="problemJson" placeholder='문제 정보를 JSON 형식으로 입력하세요.'></textarea>
     <button id="submitBtn">등록하기</button>
   </div>
 
-  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <script>
     let token = localStorage.getItem('token');
+
+    // 예제 JSON 자동 삽입
     const exampleJson = {
       "title": "IP 설정 문제",
       "description": "PC 2대에 각각 IP 주소를 설정하세요. PC1은 192.168.1.2, PC2는 192.168.1.3이어야 합니다.",
@@ -27,40 +113,69 @@
       "difficulty": "EASY",
       "tags": "ip,pc"
     };
+    $('#problemJson').val(JSON.stringify(exampleJson, null, 2));
 
+    // 네비게이션 바 처리
+    $(document).ready(function () {
+      const nav = $('#nav-links');
 
-    
-$('#problemJson').val(JSON.stringify(exampleJson, null, 2));
-
-    console.log(token)
-    $('#submitBtn').click(function () {
-      
-      if (!token) return alert("로그인이 필요합니다");
-
-      let jsonText = $('#problemJson').val();
-      let problemData;
-
-      try {
-        problemData = JSON.parse(jsonText);
-      } catch (e) {
-        return alert("유효한 JSON 형식이 아닙니다.");
+      if (token) {
+        $.ajax({
+          url: "http://localhost:8080/api/auth/is-admin",
+          method: "GET",
+          headers: {
+            "Authorization": "Bearer " + token
+          },
+          success: function (isAdmin) {
+            if (isAdmin) {
+              nav.append('<a href="../../index.html">홈</a>');
+            }
+            nav.append('<a href="#" id="logoutBtn">로그아웃</a>');
+          },
+          error: function () {
+            nav.append('<a href="#" id="logoutBtn">로그아웃</a>');
+          }
+        });
+      } else {
+        nav.append('<a href="../../login/login.html">로그인</a>');
+        nav.append('<a href="../../login/signUp.html">회원가입</a>');
       }
 
-      $.ajax({
-        url: 'http://localhost:8080/api/admin/problems',
-        method: 'POST',
-        contentType: 'application/json',
-        data: JSON.stringify(problemData),
-        headers: {
-          'Authorization': 'Bearer ' + token
-        },
-        success: function () {
-          alert("문제 등록 성공!");
-          $('#problemJson').val('');
-        },
-        error: function (xhr) {
-          alert("문제 등록 실패: " + xhr.responseText);
+      $(document).on('click', '#logoutBtn', function () {
+        localStorage.removeItem('token');
+        alert('로그아웃 되었습니다');
+        location.href = '../../index.html';
+      });
+
+      // 문제 등록 버튼
+      $('#submitBtn').click(function () {
+        if (!token) return alert("로그인이 필요합니다");
+
+        let jsonText = $('#problemJson').val();
+        let problemData;
+
+        try {
+          problemData = JSON.parse(jsonText);
+        } catch (e) {
+          return alert("유효한 JSON 형식이 아닙니다.");
         }
+
+        $.ajax({
+          url: 'http://localhost:8080/api/admin/problems',
+          method: 'POST',
+          contentType: 'application/json',
+          data: JSON.stringify(problemData),
+          headers: {
+            'Authorization': 'Bearer ' + token
+          },
+          success: function () {
+            alert("문제 등록 성공!");
+            $('#problemJson').val('');
+          },
+          error: function (xhr) {
+            alert("문제 등록 실패: " + xhr.responseText);
+          }
+        });
       });
     });
   </script>
