--- a/index.html
+++ b/index.html
@@ -6,51 +6,102 @@
   <link rel="stylesheet" href="./assets/css/style.css">
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <style>
+    * {
+      box-sizing: border-box;
+    }
+
+    body {
+      font-family: sans-serif;
+      margin: 0;
+      background: #ffffff;
+    }
+
     .navbar {
-      background-color: #333;
+      position: fixed;
+      top: 0;
+      right: 0;
+      background-color: #2b94d4;
+      width: 100%;
       padding: 14px 20px;
       display: flex;
-      justify-content: space-between;
+      justify-content: flex-end;
       align-items: center;
+      z-index: 1000;
     }
+
+    .navbar .welcome {
+      margin-right: auto;
+      color: white;
+      font-weight: bold;
+      font-size: 18px;
+    }
+
     .navbar a {
       color: white;
       text-decoration: none;
       margin-left: 20px;
+      font-weight: 500;
     }
+
     .navbar a:hover {
       text-decoration: underline;
     }
-    .welcome {
-      color: white;
-    }
-    .container {
-      text-align: center;
+
+    .main-content {
       margin-top: 100px;
+      padding: 40px;
+      max-width: 800px;
+      margin-left: auto;
+      margin-right: auto;
+      text-align: center;
+    }
+
+    h1 {
+      margin-bottom: 20px;
+      font-size: 28px;
+    }
+
+    p {
+      margin-top: 0;
+      color: #555;
+      font-size: 16px;
+    }
+
+    .feature-box {
+      width: 100%;
+      height: 300px;
+      background-color: #e0e0e0;
+      border-radius: 8px;
+      margin-top: 30px;
+      border: 2px dashed #bbb;
     }
   </style>
 </head>
 <body>
+
   <div class="navbar">
     <div class="welcome">NetLab 시스템</div>
     <div id="nav-links">
-      <!-- 동적으로 채움 -->
+      <!-- 동적으로 링크 삽입 -->
     </div>
   </div>
 
-  <div class="container">
+  <div class="main-content">
     <h1>NetLab에 오신 걸 환영합니다</h1>
     <p>네트워크 실습을 효율적으로 관리하고 평가하세요.</p>
+    <div class="feature-box">
+      <!-- 여기에 기능 구현화면 들어갈 예정 -->
+    </div>
   </div>
 
   <script>
     $(document).ready(function () {
       const token = localStorage.getItem('token');
       const nav = $('#nav-links');
-  
+
       if (token) {
         $.ajax({
-          url: "http://localhost:8080/api/auth/is-admin",  // 실제 백엔드 주소로 변경
+          url: "http://localhost:8080/api/auth/is-admin",
           method: "GET",
           headers: {
             "Authorization": "Bearer " + token
@@ -69,7 +120,7 @@
         nav.append('<a href="./login/login.html">로그인</a>');
         nav.append('<a href="./login/signUp.html">회원가입</a>');
       }
-  
+
       $(document).on('click', '#logoutBtn', function () {
         localStorage.removeItem('token');
         alert('로그아웃 되었습니다');
@@ -77,6 +128,6 @@
       });
     });
   </script>
-  
+
 </body>
 </html>
