--- a/login/login.html
+++ b/login/login.html
@@ -5,20 +5,69 @@
   <title>NetLab 로그인</title>
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <style>
+    * {
+      box-sizing: border-box;
+    }
+
     body {
       font-family: sans-serif;
+      margin: 0;
+      background: #f5f5f5;
+    }
+
+    .navbar {
+      position: fixed;
+      top: 0;
+      right: 0;
+      background-color: #2b94d4;
+      width: 100%;
+      padding: 14px 20px;
+      display: flex;
+      justify-content: flex-end;
+      align-items: center;
+      z-index: 1000;
+    }
+
+    .navbar .welcome {
+      margin-right: auto;
+      color: white;
+      font-weight: bold;
+      font-size: 18px;
+    }
+
+    .navbar a {
+      color: white;
+      text-decoration: none;
+      margin-left: 20px;
+      font-weight: 500;
+    }
+
+    .navbar a:hover {
+      text-decoration: underline;
+    }
+
+    .main {
       display: flex;
       justify-content: center;
       align-items: center;
       height: 100vh;
-      background: #f5f5f5;
     }
+
     .login-box {
+      margin-top: 80px;
       background: white;
-      padding: 30px;
+      padding: 40px;
       border-radius: 12px;
-      box-shadow: 0 8px 16px rgba(0,0,0,0.1);
+      box-shadow: 0 10px 20px rgba(0,0,0,0.15);
+      width: 100%;
+      max-width: 400px;
     }
+
+    .login-box h2 {
+      margin-bottom: 20px;
+      text-align: center;
+    }
+
     input {
       display: block;
       width: 100%;
@@ -26,52 +75,100 @@
       margin-top: 10px;
       border-radius: 6px;
       border: 1px solid #ccc;
+      font-size: 15px;
     }
+
     button {
       margin-top: 20px;
-      padding: 10px;
+      padding: 12px;
       width: 100%;
       background: #4CAF50;
       color: white;
       border: none;
       border-radius: 6px;
       cursor: pointer;
+      font-size: 16px;
+      font-weight: bold;
     }
+
     button:hover {
       background: #45a049;
     }
   </style>
 </head>
 <body>
-  <div class="login-box">
-    <h2>로그인</h2>
-    <input type="text" id="userId" placeholder="아이디">
-    <input type="password" id="password" placeholder="비밀번호">
-    <button id="loginBtn">로그인</button>
+
+  <div class="navbar">
+    <div class="welcome"><a href="../index.html" style="color: white; text-decoration: none;">NetLab</a></div>
+    <div id="nav-links"></div>
+  </div>
+
+  <div class="main">
+    <div class="login-box">
+      <h2>로그인</h2>
+      <input type="text" id="userId" placeholder="아이디">
+      <input type="password" id="password" placeholder="비밀번호">
+      <button id="loginBtn">로그인</button>
+    </div>
   </div>
 
   <script>
-    $('#loginBtn').click(function () {
-      const userId = $('#userId').val();
-      const password = $('#password').val();
+    $(document).ready(function () {
+      const token = localStorage.getItem('token');
+      const nav = $('#nav-links');
 
-      $.ajax({
-        url: 'http://localhost:8080/api/auth/login',
-        method: 'POST',
-        contentType: 'application/json',
-        data: JSON.stringify({userId, password }),
-        success: function (response) {
-          console.log('로그인 응답:', response);  
-          localStorage.setItem('token', response.message);// JWT 저장
+      if (token) {
+        $.ajax({
+          url: "http://localhost:8080/api/auth/is-admin",
+          method: "GET",
+          headers: {
+            "Authorization": "Bearer " + token
+          },
+          success: function () {
+            nav.append('<a href="../index.html">홈</a>');
+            nav.append('<a href="#" id="logoutBtn">로그아웃</a>');
+          },
+          error: function () {
+            nav.append('<a href="#" id="logoutBtn">로그아웃</a>');
+          }
+        });
+      } else {
+        nav.append('<a href="../index.html">홈</a>');
+        nav.append('<a href="./signUp.html">회원가입</a>');
+      }
 
-          
-          window.location.href = '../index.html'; 
-        },
-        error: function () {
-          alert('로그인 실패');
+      $(document).on('click', '#logoutBtn', function () {
+        localStorage.removeItem('token');
+        alert('로그아웃 되었습니다');
+        location.href = '../index.html';
+      });
+
+      $('#loginBtn').click(function () {
+        const userId = $('#userId').val();
+        const password = $('#password').val();
+
+        if (!userId || !password) {
+          return alert('아이디와 비밀번호를 입력하세요.');
         }
+
+        $.ajax({
+          url: 'http://localhost:8080/api/auth/login',
+          method: 'POST',
+          contentType: 'application/json',
+          data: JSON.stringify({ userId, password }),
+          success: function (response) {
+            console.log('로그인 응답:', response);
+            localStorage.setItem('token', response.message);
+            alert('로그인 성공!');
+            window.location.href = '../index.html';
+          },
+          error: function () {
+            alert('로그인 실패. 아이디 또는 비밀번호를 확인하세요.');
+          }
+        });
       });
     });
   </script>
+
 </body>
 </html>
